--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -49,3 +49,44 @@
   border-left: 10rpx blue solid;
   padding-left: 10rpx;
 }
+.main{
+  padding: 10rpx 20rpx;
+  font-size: 30rpx;
+}
+.item{
+
+}
+.item image{
+  width: 202rpx;
+  height: 283rpx;
+  border-radius: 20rpx;
+}
+.item-right{
+  width: 480rpx;
+  height: 283rpx;
+  float: right;
+  padding: 0 10rpx;
+}
+.item-right text{
+  color: #696969;
+}
+.item-title{
+  font-size: 35rpx;
+  padding-left: 20rpx;
+}
+.item-average{
+  color: #696969;
+  text-align: right;
+}
+.item-directors{
+  width: 480rpx;
+  height: 40rpx;
+  line-height: 40rpx;
+  overflow: hidden;
+}
+.item-casts{
+  width: 480rpx;
+  height: 80rpx;
+  line-height: 40rpx;
+  overflow: hidden;
+}
