--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -21,9 +21,9 @@
 <view class="wn-tuijian" style="">
     <text>百度云分享</text>
 </view>
-
+<!-- 
 <view class="main">
-  <view class="item" wx:for="{{5}}" wx:key="item.title">
+  <view class="item" wx:for="{{indexMovie}}" wx:key="item.title">
     <image src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2517753454.webp"></image>
     <view class="item-right">
       <view class="item-title">头号玩家</view>
@@ -32,6 +32,23 @@
       <view class="item-year">年份： <text>2018</text></view>
       <view class="item-directors">导演:<text>安东尼·罗素 / 乔·罗素安东尼·罗素</text></view>
       <view class="item-casts">主演:<text>小罗伯特·唐尼/克里斯·海姆斯沃斯</text></view>
+    </view>
+  </view>
+</view>-->
+<view class="main">
+  <view class="item" wx:for="{{indexMovie}}" wx:key="item.title" bindtap="goMovieDetail" data-movie_id="{{item.id}}">
+    <image src="{{item.images.large}}"></image>
+    <view class="item-right">
+      <view class="item-title">{{item.title}}</view>
+      <view class="item-average">豆瓣评分：  <text style='color:red;'>{{item.rating.average}}</text> </view>
+      <view class="item-genres">类型：<text>{{item.genres}}</text></view>
+      <view class="item-year">年份： <text>{{item.year}}</text></view>
+      <view class="item-directors">导演:
+          <text wx:for="{{item.directors}}" wx:key="item.title">{{item.name}}/</text>
+      </view>
+      <view class="item-casts">主演:
+          <text wx:for="{{item.casts}}" wx:key="item.title">{{item.name}}/</text>
+      </view>
     </view>
   </view>
 </view>
