--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,5 +1,25 @@
 /* pages/index/index.wxss */
-
+.kf{
+  position: fixed;
+  right: 0rpx;
+  bottom: 100rpx;
+  z-index: 999; 
+}
+.kf image{
+  width: 100rpx;
+  height: 90rpx;
+  float: right;
+}
+.kf button{
+  padding: 0;
+  margin: 0;
+  width: 100rpx;
+  height: 90rpx;
+  background: rgba(255,255,255,0)
+}
+.kf button::after{
+  border: none;
+}
 .swiper-box{
   width: 100%;
   height: 400rpx;
